fix: added line-height on button to fix his vertical alignement

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,8 @@ main {
         &.btn {
             display: block;
             width: fit-content;
+            height: 27px;
+            line-height: 1.2;
             margin: 1rem auto 0;
             padding: .2rem 1rem;
             border-radius: 2px;
@@ -45,7 +47,7 @@ main {
     section {
         background: #fff;
         border-radius: 4px;
-        box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+        box-shadow: rgba(17, 12, 46, 0.15) 0 48px 100px 0;
 
         &.login {
             width: 350px;
